2006-01-04  Paul Eggert  <eggert@cs.ucla.edu>

	* AUTHORS: Simplify list by removing legalisms.
	* THANKS: Add Larry Wall, who contributed to manual.  Update email
	addresses.
	* Makefile.am (SUBDIRS): Remove m4.  Put lib first, then other
	source files, so documentation can rely on programs being built.
	* bootstrap: Import changes from Bison bootstrap.  Add gettext,
	gettime, sh-quote, stat-time, verify, version-etc-fsf modules.
	Remove posixver module.  Retrieve doc/fdl.texi from gnulib.
	* configure.ac (AC_PREREQ): Bump to 2.59.
	(AC_INIT): Bump version to 2.8.7-cvs.
	(AC_CONFIG_AUX_DIR): Change from config to build-aux.
	Prefer AC_CHECK_HEADERS_ONCE to AC_CHECK_HEADERS
	and AC_CHECK_FUNCS_ONCE to AC_CHECK_FUNCS.
	Remove jm_AC_TYPE_INTMAX_T, jm_AC_TYPE_UINTMAX_T,
	AC_STRUCT_ST_MTIM_NSEC.
	(DIFFUTILS_PREREQUISITES): New macro.  Call it.
	(REGEX_MALLOC): Remove; no longer needed.
	(AM_GNU_GETTEXT_VERSION): Now 0.14.15.
	(AM_GNU_GETTEXT): Call.
	(LIB_CLOCK_GETTIME): Remove; bootstrap now does that.
	(AC_FUNC_SETMODE_DOS): Remove.
	(AC_CONFIG_FILES): Remove m4/Makefile.
	* doc/diff.texi: Use @- at end of lines that should end in white space,
	so that Emacs doesn't remove the white space.
	(diff Options): "diff -NUM" is a pure extension to POSIX, so support
	it unconditionally.
	* lib/Makefile.am (noinst_HEADERS): Remove quotesys.h.
	(lib_SOURCES): Remove quotesys.c.
	(DISTCLEANFILES): Remove.
	(EXTRA_DIST): Remove setmode.h, waitpid.c.
	* lib/cmpbuf.c (block_read): Reword to avoid gcc -W warning.
	* lib/setmode.c, lib/setmode.h: Remove.
	* m4/setmode.m4, m4/gnu-source.m4, m4/Makefile.am.in: Remove.
	* m4/jm-glibc-io.m4: Remove.
	* src/cmp.c: Don't include <setmode.h>.
	(specify_ignore_initial): Reword to avoid gcc -W warnings.
	(main): Use freopen instead of setmode, since freopen is in POSIX.
	* src/context.c: Revert most 2004-09-01 changes.  Then:
	(TIMESPEC_NS): Remove.  All uses replaced by
	get_stat_mtime_ns.
	Include stat-time.h, strftime.h.