@@ -49,5 +49,5 @@ GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with GNU diffutils; see the file COPYING.  If not, write to
-the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
-Boston, MA 02111-1307, USA.
+the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
+Boston, MA 02110-1301, USA.
