@@ -236,7 +236,7 @@ User-visible changes in version 2.0:
 
 
 
-Copyright (C) 1993, 1994, 1998, 2001, 2002, 2004 Free Software
+Copyright (C) 1993, 1994, 1998, 2001, 2002, 2004, 2006 Free Software
 Foundation, Inc.
 
 This file is part of GNU Diffutils.
@@ -253,5 +253,5 @@ GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with this program; see the file COPYING.  If not, write to
-the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
-Boston, MA 02111-1307, USA.
+the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
+Boston, MA 02110-1301, USA.
